# roop-unleashed-wip

./: install.js  pinokio.js  pinokio.json  start.js  torch.js  update.js
app/: AGENT.md  config_colab.yaml  pyproject.toml  settings.py
app/.claude/: settings.local.json
app/docs/: implementation_plan.md  task.md
app/roop/: ProcessMgr.py  StreamWriter.py  core.py  face_swap_models.py  face_util.py  globals.py  memory.py  onnx_runtime.py  progress_status.py  staged_executor.py  util_ffmpeg.py  utilities.py
app/roop/config/: settings.py
app/roop/core/: app.py  providers.py  resources.py
app/roop/face/: __init__.py  alignment.py  analyser.py  analytics_runtime.py
app/roop/media/: ffmpeg_ops.py  ffmpeg_writer.py  video_io.py
app/roop/memory/: __init__.py  planner.py
app/roop/onnx/: __init__.py  session.py
app/roop/pipeline/: batch_executor.py  one_chain_executor.py
app/roop/processors/: Enhance_CodeFormer.py  Enhance_DMDNet.py  Enhance_GFPGAN.py  Enhance_GPEN.py  FaceSwapInsightFace.py  (+3 more)
app/tests/: conftest.py  test_core_batch_process.py  test_core_execution_providers.py  test_embedding_utils.py  test_faceswap_insightface.py  test_faceswap_preview_workflow.py  test_one_chain_executor.py  test_onnx_runtime.py  test_onnx_session.py  test_process_mgr_face_analysis.py  test_process_mgr_single_batch_pool.py  test_process_mgr_staged_equivalence.py  test_progress_status.py  test_resume_cache.py  test_settings_and_memory.py  test_staged_executor.py  test_video_io.py  test_video_stage_cache.py
app/tools/: benchmark_staged_short.py
app/ui/: globals.py  main.py
(+15 files in other folders)
