[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albucore==0.0.16",
    "fastapi>=0.135.3",
    "ftfy>=6.3.1",
    "gradio==5.50.0",
    "insightface==0.7.3",
    "numpy>=1.26,<2.0",
    "onnx==1.16.0",
    "opencv-python==4.9.0.80",
    "psutil==5.9.6",
    "pydantic==2.10.6",
    "pyvirtualcam>=0.15.0",
    "regex>=2026.4.4",
    "tqdm==4.66.4",
]
